<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99D5F7"
    android:elevation="4dp"
    tools:context="com.example.promise.med_manager.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="80dp">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/med_manager"
        android:textSize="33sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    </LinearLayout>


    <Button
        android:id="@+id/googleBtn"
        style="@style/allBlueButtons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/bg_blue_button"
        android:drawableStart="@drawable/ic_google_icon"
        android:paddingStart="@dimen/padding_normal"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

</RelativeLayout>
