<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/medication_name"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_medicine" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:ems="10"
                    android:id="@+id/medName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords"
                    android:padding="@dimen/padding_average"
                    android:singleLine="true"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medication_dosage"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:ems="10"
                    android:id="@+id/dosage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:padding="@dimen/padding_average"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medicine_description"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:ems="10"
                    android:id="@+id/medDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences"
                    android:padding="@dimen/padding_average"
                    android:textColorHint="@color/grey_500" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medicine_frequency"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_rounded_gray"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:padding="12dp"
                    android:id="@+id/medFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="Medication Time"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:id="@+id/medTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:focusable="false"
                    android:onClick="AlarmTimer"
                    android:clickable="true"/>

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/start_date"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:id="@+id/medStartDate"
                    android:ems="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:focusable="false"
                    android:onClick="pickStartDate"
                    android:clickable="true" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/end_date"
                android:textSize="16sp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <EditText
                    android:id="@+id/medEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:onClick="pickEndDateDate"/>

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="@drawable/bg_blue_button"
                android:text="Save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="18sp"
                android:onClick="Save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>