<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/medication_name"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_medicine" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/medName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapWords"
                    android:padding="@dimen/padding_average"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_500"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medication_dosage"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/dosage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:padding="@dimen/padding_average"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_500"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medicine_description"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/medDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:inputType="textCapSentences"
                    android:padding="@dimen/padding_average"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_500"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:alpha="0.8"
                android:text="@string/medicine_frequency"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_rounded_gray"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_description" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />


                <TextView
                    android:id="@+id/medFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="Medication Time"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/medTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/start_date"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/medStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                style="@style/generalScreenHints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/end_date"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_edit_text_gray"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/padding_average"
                    app:srcCompat="@drawable/ic_add_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gws_color_material_grey_500" />

                <TextView
                    android:id="@+id/medEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#a3dbfa">

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:onClick="Edit"
            android:text="Edit"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:onClick="Delete"
            android:text="Delete"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>

